@@ -1,3 +1,4 @@
+- removed Class::InsideOut dependency
 - token <null>
 
 0.15  2006-08-16
